# centauro-scraper

./: README.md
centauro_test_volix/: pyproject.toml
centauro_test_volix/output/: products.json  products.parquet
centauro_test_volix/src/: client.py  dashboard.py  exporters.py  input.json  loaders.py  main.py  output_schema_sample.json  parser.py  scraper.py  settings.py
